--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@
 			
 			<div class="row">
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
-					<div class="card" style="width:100%">
+					<div class="card text-center" style="width:100%">
 						<a href="https://forms.office.com/r/v86j2ibVkN">
 						<img src="img/2023_term4_enrol_snippet.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
@@ -60,7 +60,7 @@
 				</div>
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
-					<div class="card" style="width:100%">
+					<div class="card text-center" style="width:100%">
 						<a href="https://forms.office.com/r/FiJYZkRaZu">
 						<img src="img/games_night.jpg" style="max-height: 300px;" class="card-img-top"
 							alt="Games"></a>
@@ -74,7 +74,7 @@
 					</div>
 				</div> 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
-					<div class="card" style="width:100%">
+					<div class="card text-center" style="width:100%">
 						<img src="img/stock6.jpg" style="max-height:300px" class="card-img-top" alt="Individual Player Development">
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Private Sessions</h2>
@@ -85,7 +85,7 @@
 					</div>
 				</div>
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
-					<div class="card" style="width:100%">
+					<div class="card text-center" style="width:100%">
 						<a href="https://forms.office.com/r/5NbZzEHwDB">
 						<img src="img/2023.term3.hols.banner.cropped.png" style="max-height:300px" class="card-img-top" alt="Term 3 Holidays"></a>
 						<div class="card-body d-flex flex-column">
