--- a/TOS.html
+++ b/TOS.html
@@ -214,6 +214,7 @@
 					<p>Punctuality and Presentation are key. Arrive early and ready to train!</p>
 					<p>Bullying is strictly prohibited.</p>
 					<p>When the coach is speaking <b>you are not.</b></p>
+					<p>General disinterest, distraction or dissent will not be tolerated.*</p>
 					<p>Foul language will not be tolerated*.</p>
 					<p>Dummy spits or tantrums will not be tolerated*.</p>
 					<p>Disruptive behaviour will not be tolerated*.</p>
@@ -260,17 +261,14 @@
 						In the case of serious misconduct where the behaviour of the player or parent is deemed a risk to the safety
 						or enjoyment of other players or staff, Foot and Ball Academy reserves the right to immediately suspend that
 						player from continuing as an Academy member.</p>
-					<p>Where a player is found to have beached the standards of player behaviour outlined above the following
+					<p> More generally, where a player is found to have beached the standards of player behaviour outlined above the following
 						procedure will generally apply:</p>
 					<ol>
 						<li><b>Verbal warning:</b> a verbal warning will be given to the player to cease the behaviour in question.
 							We will inform player of the next step if the behaviour continues to occur.</li>
-						<li><b>Behaviour continues:</b> the player will be excluded from the session for a period (up to 10
-							minutes). The player will again be informed of the next step if behaviour continues/occurs again.</li>
-						<li><b>If the players behaviour does not improve:</b> the player will be excluded from the remainder of the
-							session. Parents will be brought in/phoned to explain why the player is being excluded. At this stage both
-							the player and parent will be informed of the next step if behaviour continues or occurs again.</li>
-						<li><b>Continued breaches:</b> the player will be sent home with parent/guardian. A decision will be made on
+						<li><b>Behaviour continues:</b> the player will be issued a second warning along with a meeting with their parent or guardian to discuss
+							any potential issues or problems.</li>
+						<li><b>CA third and final breach:</b> the player will be sent home with parent/guardian. A decision will be made on
 							whether the player can continue in the program or have his/her registration cancelled. In these instances,
 							no refund of fees will apply.</li>
 					</ol>
