--- a/TOS.html
+++ b/TOS.html
@@ -268,7 +268,7 @@
 							We will inform player of the next step if the behaviour continues to occur.</li>
 						<li><b>Behaviour continues:</b> the player will be issued a second warning along with a meeting with their parent or guardian to discuss
 							any potential issues or problems.</li>
-						<li><b>CA third and final breach:</b> the player will be sent home with parent/guardian. A decision will be made on
+						<li><b>A third and final breach:</b> the player will be sent home with parent/guardian. A decision will be made on
 							whether the player can continue in the program or have his/her registration cancelled. In these instances,
 							no refund of fees will apply.</li>
 					</ol>
