--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v18.0" nonce="ndWwdczS"></script>
 
 	<!-- Nav Section Start -->
 	<div id="nav-placeholder"></div>
@@ -93,12 +95,12 @@
 			<div class="row py-5 text-center">
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<h3>Term 3 Holiday Sessions, 2023! </h3>
-					<p class="lead mt-2"> Last week of September. Click to find out more!  
-					<a href="https://forms.office.com/r/5NbZzEHwDB" target="_blank">Register Now.</a></p>
-					<a target="_blank" href="./img/2023.Term_3_Holiday_flyer.png">
-						<img src="./img/2023.Term_3_Holiday_flyer.png" alt="Forest" style="width:150px">
-					</a>
+					<div class="fb-page" data-href="https://www.facebook.com/footandballacademy" data-tabs="timeline" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
+						<blockquote cite="https://www.facebook.com/footandballacademy" class="fb-xfbml-parse-ignore">
+							<a href="https://www.facebook.com/footandballacademy">
+								Foot and Ball Academy
+							</a></blockquote>
+					</div>
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
