changed facebook to show posts instead of timeline
as per this discussion
https://developers.facebook.com/community/threads/321871286781329/

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<div class="row py-5 text-center">
 				<div class="col-lg-4 col-md-4">
 					<i class="fas fa-futbol mb-3"></i>
-					<div class="fb-page" data-href="https://www.facebook.com/footandballacademy" data-tabs="timeline" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
+					<div class="fb-page" data-href="https://www.facebook.com/footandballacademy" data-show-posts="true" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
 						<blockquote cite="https://www.facebook.com/footandballacademy" class="fb-xfbml-parse-ignore">
 							<a href="https://www.facebook.com/footandballacademy">
 								Foot and Ball Academy
