update menus, fixed faxcebook embed, changed frontpage, tidied up navbar, edited some text

--- a/SchoolHolidays.html
+++ b/SchoolHolidays.html
@@ -59,6 +59,12 @@
 				</div>
 			</div>
 
+			<div class="row">
+				<div class="col-lg-12 col-md-12  align-self-center">
+					<a href="register.html" class="btn btn-warning" role="button">Click Here to Register</a>
+				</div>
+			</div>
+
 		</div>
 	</section>
 	<!-- About Info Section End -->
