--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -98,7 +98,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
-					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAZ__pX1ZMJUM1VEWjRDMDdBN1QzMTlLWjIxV0kySUJVTS4u" class="btn btn-warning" role="button">Click Here to Register</a>
+					<a href="register.html" class="btn btn-warning" role="button">Click Here to Register</a>
 				</div>
 			</div>
 
