--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,8 @@
 <!-- Navbar Section Start -->
+<!-- <div class="container-fluid d-flex align-items-center justify-content-center" style="height: 50px;"> -->
 <nav class="navbar navbar-expand-lg navbar-light py-0" style="background-color: #4274AD;"
   uk-sticky="top:100; animation: uk-animation-slide-top; bottom: #sticky-on-scroll-up">
-  <div class="container ">
+  <div class="container" >
     <a href="index.html" class="navbar-brand">
       <img src="./img/AssetsMan.png" class="img-fluid p-0" style="height: 40px; ">
       <img src="./img/AssetsTitle.png" class="img-fluid p-0" style="height: 40px; ">
@@ -12,7 +13,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navBar">
-      <ul class="navbar-nav ">
+      <ul class="navbar-nav justify-content-center">
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -35,23 +36,25 @@
             About Us
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="ContactUs.html">Contact Us</a>
             <a class="dropdown-item" href="Location.html">Location</a>
             <a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
             <a class="dropdown-item" href="AgeCategories.html">Age Categories</a>
             <a class="dropdown-item" href="Staff.html">Staff</a>
             <a class="dropdown-item" href="Privacy.html">Privacy</a>
+            <a class="dropdown-item" href="TOS.html">Terms and Conditions</a>
           </div>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" href="timetables.html">Timetables</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="ContactUs.html">Contact Us</a>
-        </li>
-        <li class="nav-item">
+        </li> -->
+        <!-- <li class="nav-item">
           <a class="nav-link" href="TOS.html">Terms and Conditions</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="btn btn-warning" href="register.html"><b>Register Now</b></a>
         </li>
@@ -59,3 +62,4 @@
     </div>
   </div>
 </nav>
+<!-- </div> -->
