--- a/timetables.html
+++ b/timetables.html
@@ -52,16 +52,16 @@
 	<!-- About Info Section End -->
 
 	<!-- About Services Section Start -->
-	<section id="about-services" class="py-5 text-light
+	<!-- <section id="about-services" class="py-5 text-light
 	text-center bg-dark">
 
-	</section>
+	</section> -->
 	<!-- About Services Section End-->
 
 	<!-- About Testimonial Section Start -->
-	<section id="about-testimonial" class="py-5">
+	<!-- <section id="about-testimonial" class="py-5">
 
-	</section>
+	</section> -->
 	<!-- About Testimonial Section End -->
 
 
