--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!-- Nav Section End -->
 
 	<!-- Slider Section Start -->
-<!-- 	<section id="slider" class="bg-dark">
+	<section id="slider" class="bg-dark">
 		<div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li class="active" data-slide-to="0" data-target="#myCarousel"></li>
@@ -86,38 +86,46 @@
 				<span class="carousel-control-next-icon"></span>
 			</a>
 		</div>
-	</section> -->
+	</section>
 	<!-- Slider Section End -->
 
 	<!-- Showcase Section Start -->
 	<section id="showcase">
 		<div class="container">
 			<div class="row py-5 text-center">
-				<div class="col-lg-4 col-md-4">
-					<i class="fas fa-futbol mb-3"></i> <br>
-					<div class="fb-page" data-href="https://www.facebook.com/footandballacademy" data-show-posts="true" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false">
-						<blockquote cite="https://www.facebook.com/footandballacademy" class="fb-xfbml-parse-ignore">
-							<a href="https://www.facebook.com/footandballacademy">
-								Foot and Ball Academy
-							</a></blockquote>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<i class="fas fa-futbol mb-3"></i> <br>
+
+				<div class="col-xl-3">
+					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
 					<h3>Our Mission</h3>
 					<p class="lead mt-2"> Founded in the Hawkesbury, NSW, we are a Private Football Academy. Our infrastructure is built around player development, NOT winning, from 5 years old and up. 
 						We offer other services such as specialised group sessions as well as 1 on 1 technical training.
 					</p>
 					<a href="register.html" class="btn btn-info">Register for a Program</a>
+					<br>
 
 				</div>
-				<div class="col-lg-4 col-md-4">
-					<i class="fas fa-futbol mb-3"></i> <br>
+
+				<div class="col-xl-6">
+					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
+					<div class="fb-page" data-href="https://www.facebook.com/footandballacademy" data-show-posts="true" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" 	
+					data-width=500px width="500px" >
+						<blockquote cite="https://www.facebook.com/footandballacademy" class="fb-xfbml-parse-ignore">
+							<a href="https://www.facebook.com/footandballacademy">
+								Foot and Ball Academy Facebook 
+							</a></blockquote>
+					</div>
+					<br>
+				</div>
+				
+				<div class="col-xl-3">
+					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
 					<h3>Meet our Coach</h3>
 					<p class="lead mt-2">Nick is committed to incorporating the latest trends in footballing education into his sessions!</p>
 					<a target="_blank" href="Staff.html">
 						<img src="./img/nick.jpg" alt="Forest" style="width:150px">
 					</a>
+
+					<br>
 
 				</div>
 			</div>
