--- a/register.html
+++ b/register.html
@@ -86,13 +86,13 @@
 				</div>
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/5NbZzEHwDB">
-						<img src="img/2023.term3.hols.banner.cropped.png" style="max-height:300px" class="card-img-top" alt="Term 3 Holidays"></a>
+						<a href="https://forms.office.com/r/Fct8QiW3QM">
+						<img src="img/Jan2024.hols.banner.png" style="max-height:300px" class="card-img-top" alt="January 2024 Holidays"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 3 Holiday Sessions</h2>
+							<h2 class="card-title">January 2024 Holiday Sessions</h2>
 							<p class="card-text">Register: click below or find out more --><a href="Timetables.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/5NbZzEHwDB"
+							<a href="https://forms.office.com/r/Fct8QiW3QM"
 							class="btn btn-info">Register Now</a>
 						</div>
 					</div>
