--- a/register.html
+++ b/register.html
@@ -61,31 +61,6 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/FiJYZkRaZu">
-						<img src="img/games_night.jpg" style="max-height: 300px;" class="card-img-top"
-							alt="Games"></a>
-						<div class="card-body d-flex flex-column">
-							<h2 class="card-title"> Term 4, 2023, Games Night</h2>
-							<p class="card-text"> Weekly Games Night's for U7's - U10's. CLICK below or <a href="OurPhilosophy.html"
-									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/FiJYZkRaZu"
-								class="btn btn-info">Register Now</a>
-						</div>
-					</div>
-				</div> 
-				<div class="col-md-6 mb-3 d-flex align-items-stretch">
-					<div class="card text-center" style="width:100%">
-						<img src="img/stock6.jpg" style="max-height:300px" class="card-img-top" alt="Individual Player Development">
-						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Private Sessions</h2>
-							<p class="card-text">Looking for 1-on-1 player development? Book one or more sessions! <a
-									href="PrivateSessions.html" class="link-secondary">Read more...</a></p>
-							<a href="" class="btn btn-info disabled" aria-disabled="true">Call Us: 0452 583 279 </a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 mb-3 d-flex align-items-stretch">
-					<div class="card text-center" style="width:100%">
 						<a href="https://forms.office.com/r/Fct8QiW3QM">
 						<img src="img/Jan2024.hols.banner.png" style="max-height:300px" class="card-img-top" alt="January 2024 Holidays"></a>
 						<div class="card-body d-flex flex-column">
@@ -94,6 +69,28 @@
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/Fct8QiW3QM"
 							class="btn btn-info">Register Now</a>
+						</div>
+					</div>
+				</div> 
+				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="card text-center" style="width:100%">
+						<img src="img/stock6.jpg" style="max-height:300px" class="card-img-top" alt="Individual Player Development">
+						<div class="card-body d-flex flex-column">
+							<h2 class="card-title">1-on-1 Sessions</h2>
+							<p class="card-text">Our new morning 1-on-1 privates. U12's - U18's. <a href="PrivateSessions.html" 
+									class="link-secondary">Read more...</a></p>
+							<a href="" class="btn btn-info disabled" aria-disabled="true">Call Us: 0452 583 279 </a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="card text-center" style="width:100%">
+						<img src="img/stock5.jpg" style="max-height:300px" class="card-img-top" alt="January 2024 Holidays"></a>
+						<div class="card-body d-flex flex-column">
+							<h2 class="card-title">TBA</h2>
+							<p class="card-text">Find out more about us --><a href="OurPhilosophy.html"
+									class="link-secondary">Read more...</a></p>
+							<a href="" class="btn btn-info disabled" aria-disabled="true">Coming soon..</a>
 						</div>
 					</div>
 				</div>
