--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
 						<img src="img/Jan2024.hols.banner.png" style="max-height:300px" class="card-img-top" alt="January 2024 Holidays"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">January 2024 Holiday Sessions</h2>
-							<p class="card-text">Register: click below or find out more --><a href="Timetables.html"
+							<p class="card-text">Register: click below or find out more --><a href="timetables.html"
 									class="link-secondary">Read more...</a></p>
 							<a href="https://forms.office.com/r/Fct8QiW3QM"
 							class="btn btn-info">Register Now</a>
