--- a/timetables.html
+++ b/timetables.html
@@ -41,12 +41,12 @@
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
-			<p>Term 3 Sept - Oct <b>School Holidays</b>, 2023</p>
-			<img src="img/FAB_2023.Term3.holsUPDATED.timetable.png" width="70%">
+			<p>January <b>School Holidays</b>, 2024</p>
+			<img src="img/January.2024.hols.timetable.png" width="70%">
 		</div>
 		<div class="container">
-			<p> <b>CONFIRMED</b> Term 4, 2023</p>
-			<img src="img/2023.term_4_draft_tt.png" width="70%">
+			<p> <b>CONFIRMED</b> Term 1, 2024</p>
+			<img src="img/Term_1_timetable_2024.jpg" width="70%">
 		</div>
 	</section>
 	<!-- About Info Section End -->
