--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="carousel-caption mb-5 text-center">
 							<h2 class="display-4 text-light"><span class="emboss2">Our Staff</span></h2>
 							<p class="lead ">
-								<span class="emboss">Find out what motivates our coaches. Put names to faces!</span>
+								<span class="emboss">Meet our Academy Coaches</span>
 							</p>
 							<a href="Staff.html" class="btn btn-info">Read More</a>
 						</div>
@@ -58,8 +58,7 @@
 						<div class="carousel-caption pb-5 mb-5 text-right">
 							<h2 class="display-4 text-light"><span class="emboss2">Programs</span></h2>
 							<p class="lead ">
-								<span class="emboss">Enrolling for a school term? A one-off group session? Or a 1 on 1? Find out more.
-								</span>
+								<span class="emboss">View what we have to offer</span>
 							</p>
 							<a href="register.html" class="btn btn-info">Register for a Program</a>
 						</div>
@@ -72,7 +71,7 @@
 								<h2 class="display-4 text-light"><span class="emboss2">Who we are</span></h2>
 							</div>
 							<p class="lead ">
-								<span class="emboss">Our core Philosophy defines us. Find out more.</span>
+								<span class="emboss">Our Philosphy is what sets us apart.</span>
 							</p>
 							<a href="OurPhilosophy.html" class="btn btn-info">Read More</a>
 						</div>
@@ -97,8 +96,10 @@
 				<div class="col-xl-3">
 					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
 					<h3>Our Mission</h3>
-					<p class="lead mt-2"> Founded in the Hawkesbury, NSW, we are a Private Football Academy. Our infrastructure is built around player development, NOT winning, from 5 years old and up. 
-						We offer other services such as specialised group sessions as well as 1 on 1 technical training.
+					<p class="lead mt-2"> We are an educational establishment focused on long-term individual player development. 
+						Think of us like a “primary school” for football i.e. six y/o and up. 
+						We subscribe to the philosophy that a primary school player’s development jounrey should be focused on self-improvement, not the accumulation of competition-based accolades. 
+						We also offer specialized 1-on-1 training sessions for teenagers i.e. U13’s – U18’s. Targeted at those searching for upgrades inside their own individual games.
 					</p>
 					<a href="register.html" class="btn btn-info">Register for a Program</a>
 					<br>
@@ -119,8 +120,8 @@
 				
 				<div class="col-xl-3">
 					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
-					<h3>Meet our Coach</h3>
-					<p class="lead mt-2">Nick is committed to incorporating the latest trends in footballing education into his sessions!</p>
+					<h3>Meet our Founder</h3>
+					<p class="lead mt-2">Nick has deciated Foot and Ball Academy to incorporating the latest trends in footballing education from around the world.</p>
 					<a target="_blank" href="Staff.html">
 						<img src="./img/nick.jpg" alt="Forest" style="width:150px">
 					</a>
