--- a/index.html
+++ b/index.html
@@ -98,10 +98,9 @@
 					<h3>Our Mission</h3>
 					<p class="lead mt-2"> We are an educational establishment focused on long-term individual player development. 
 						Think of us like a “primary school” for football i.e. six y/o and up. 
-						We subscribe to the philosophy that a primary school player’s development jounrey should be focused on self-improvement, not the accumulation of competition-based accolades. 
 						We also offer specialized 1-on-1 training sessions for teenagers i.e. U13’s – U18’s. Targeted at those searching for upgrades inside their own individual games.
 					</p>
-					<a href="register.html" class="btn btn-info">Register for a Program</a>
+					<a href="register.html" class="btn btn-info">Register Now</a>
 					<br>
 
 				</div>
@@ -121,7 +120,7 @@
 				<div class="col-xl-3">
 					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
 					<h3>Meet our Founder</h3>
-					<p class="lead mt-2">Nick has deciated Foot and Ball Academy to incorporating the latest trends in footballing education from around the world.</p>
+					<p class="lead mt-2">Nick has dedicated Foot and Ball Academy to incorporating the latest trends in footballing education from around the world.</p>
 					<a target="_blank" href="Staff.html">
 						<img src="./img/nick.jpg" alt="Forest" style="width:150px">
 					</a>
