--- a/Pricing.html
+++ b/Pricing.html
@@ -24,6 +24,10 @@
 	<section id="about" class="text-center py-5 text-light">
 		<div class="inner-overlay">
 			<div class="container">
+			<p>January <b>School Holidays</b>, 2024</p>
+			<img src="img/January.2024.hols.timetable.jpg" width="70%">
+		</div>
+			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Pricing Summary</h1>
