--- a/Pricing.html
+++ b/Pricing.html
@@ -24,10 +24,6 @@
 	<section id="about" class="text-center py-5 text-light">
 		<div class="inner-overlay">
 			<div class="container">
-			<p>January <b>School Holidays</b>, 2024</p>
-			<img src="img/January.2024.hols.timetable.jpg" width="70%">
-		</div>
-			<div class="container">
 				<div class="row">
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Pricing Summary</h1>
@@ -43,6 +39,10 @@
 
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
+		<div class="container">
+			<p>Term 1 <b>SRate Card</b>, 2024</p>
+			<img src="img/Term_1_Ratecard_2024.png" width="70%">
+		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
