--- a/Pricing.html
+++ b/Pricing.html
@@ -54,7 +54,7 @@
 					<p class="lead"><b>U7’s – U8’s</b> (1 hour session). Cap: 5 players (+ subscribers).</p>
 					<p class="lead"><b>U9’s – U10’s</b> (1 hour session). Cap: 5 players (+ subscribers).</p>
 					<p class="lead"><b>U11’s – U12’s</b> (1 hour 15-30 session). Cap: 5 players (+ subscribers).</p>
-					<p class="lead"><b>Weekly Subscribers</b> Click on <a href="sub_play">Subscription Players</a> to find out more!</p>
+					<p class="lead"><b>Weekly Subscribers</b> Click on <a href="subscribers">Subscription Players</a> to find out more!</p>
 					
 					<p class="lead">Academy Sibling Discount U7's - U10's: <b>$22 per additional player per session</b>.</p>
 					<p class="lead">Academy Sibling Discount U11's - U12's: <b>$25 per additional player per session</b>.</p>
