--- a/Pricing.html
+++ b/Pricing.html
@@ -40,7 +40,7 @@
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
-			<p>Term 1 <b>SRate Card</b>, 2024</p>
+			<p>Term 1 <b>Rate Card</b>, 2024</p>
 			<img src="img/Term_1_Ratecard_2024.png" width="70%">
 		</div>
 		<div class="container">
