--- a/subscribers.html
+++ b/subscribers.html
@@ -173,7 +173,7 @@ td {
 						For the Term 1,2024 (only) we are partitioning our contract <b>into two, smaller, 5 week ones.</b> 
 						The client will pay the first five weeks up front, then at the conlusion of Week 5, pay the second five weeks upfront if they choose to continue. </p>
 					<p>
-						Your Term 4 timeline will look something like: (1) a payment of 5 x your age group subscription rate upfront. (2) Week 5: assess current benefits of subscription, 
+						Your Term 1 timeline will look something like: (1) a payment of 5 x your age group weekly subscription rate, upfront. (2) Week 5: assess current benefits of subscription, 
 						(3) either, re-sign for the remainder five weeks of Term 4 (another identical payment), or decide on other options.
 					</p>
 					
