--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -53,8 +53,7 @@
 						The other 30-40% of our allocated term sessions focus on passing and all it’s aspects. This latter component of the curriculum has a 2 v 1’s and 3 v 2’s flavour to it.</p>
 					<p class="lead">
 						<b>U9's - U12's:</b> A typical term follows a rotational timetable, covering five main modules. (1) Dribbling and Ball Mastery (2) Attacking (3) Passing and Ball Control
-						(4) Possession (5) Defending </p>. We believe mastering each of these modules best prepares the player for their teenager years when tactics and 
-						performance based 11-aside games become the primary focus during player development.  
+						(4) Possession (5) Defending. We believe mastering each of these modules best prepares the player for their teenager years when tactics and performance based 11-aside games become the primary focus during player development. </p>  
 
 
 					<h3> Pricing and Player Commitments </h3>
@@ -68,9 +67,7 @@
 					<p class="lead">
 						Players are to select a minimum of one time slot per week according to their age group.
 						Ages are determined based on the players age as of December EOY.</p>
-					<h3>Siblings</h3>
-					<p class="lead">
-						<b>Siblings also receive a discount.</b>
+		
 					<h3>Joining Fees and Uniform Fees</h3>
 					<p class="lead">
 						<b>None!</b> At Foot and Ball Academy we believe our <b>no joining fee and no uniform fee</b> is a financial advantage in
