--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -29,7 +29,7 @@
 					<div class="col mt-5 pt-4">
 						<h1 class="text-light">Private Sessions</h1>
 						<p class="lead">
-							Tailored sessions for you and your team.
+							Tailored 1-on-1 sessions.
 						</p>
 					</div>
 				</div>
@@ -44,7 +44,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						We offer a variety of accessible training sessions outside of our core school term programs.</p>
+						During 2024, we are expanding our Academy's focus to include private 1-on-1 sessions for U13's - U18's.</p>
 					<p class="lead">
 						These sessions are customised to suit the requirements of the client and their specific training needs.</p>
 					<p class="lead">
@@ -53,19 +53,7 @@
 					<h4>A general notice: At this early stage of our journey, we do not currently have access to full sized goals. 
 						Therefore, shooting exercises that involve a proper game-like finish are unavailable at our current location.</h4>
 					<p class="lead">
-						Below are a list of our sessions and what we offer:</p>
-
-					<h3> Group training session </h3>
-					<p class="lead">
-						This works best with 3+ players that want a private session. This allows us to devise a wider variety of exercises including more 
-						dynamic passing sequences as well as the traditional individually based exercises. 
-						We customise these sessions to the desires of the client(s), and can expand to include plyometrics, and fast feet.</p>
-					<p></p>
-					<ul>
-						<li>Age Category: Open to all ages.</li>
-						<li>Suggested Focus: 13+ years old.</li>
-						<li>Price: call for quote or consultation.</li>
-					</ul>
+						Below is more detail on what we offer:</p>
 
 					<h3>1-on-1 or 1-on-2 focus session</h3>
 					<p class="lead">
@@ -75,34 +63,21 @@
 					<ul>
 						<li>Age Category: Open to all ages.</li>
 						<li>Suggested Focus: 13+ years old.</li>
-						<li>Price: call for quote or consultation.</li>
+						<li>Price: $100 per session hour.</li>
 					</ul>
 
-					<h3>Team Sessions</h3>
-					<p class="lead">
-						Providing the timing does not clash with our School Terms Programs and your club is ok with it (please check!), 
-						we also offer consultation on team training sessions. 
-						This might be for a team that is coach-less, or wanting to improve on their session structure or get in a different style session. 
-						We are open to the clients needs!</p>
-						<p></p>
-					<ul>
-						<li>Age Category: Open to all ages.</li>
-						<li>Suggested Focus: 13+ years old.</li>
-						<li>Price: call for quote or consultation.</li>
-					</ul>
-					
 					<h3>Coaching Courses (Coming Soon)</h3>
 					<p class="lead">
-						In light of the wealth of knowledge on proper youth player development currently flooding out of Europe online, 
+						Considering the wealth of online knowledge on proper youth player development, 
 						Foot and Ball Academy will be releasing a short course for Parents (more than likely) who have by one way, 
-						or another come to be the coach of their kids local team. Perhaps lacking confidence, or unsure of proper expectations, 
-						or would like some simple philosophical guidelines when approaching the season, this course will include a background of why you are the coach, 
-						the (real) incentive structure of Football in Australia, and some simple easy-to-digest philosophical guidelines all of which are designed to 
+						or another, come to be the coach of their kids' local grassroots team. Aimed at those who might be lacking in confidence, unsure of proper expectations, 
+						or in need of simple and proven philosophical guidelines when coaching. This course will include a background on why you are the coach, 
+						the (real) incentive structure of Football in Australia, and some simple easy-to-digest philosophical guidelines designed to 
 						ensure the kids grow up in a healthy footballing environment.</p>
 						<p></p>
 					<ul>
 						<li>Age Category: Open to all ages.</li>
-						<li>Suggested Focus: Coaches from U/5's through to U/11's</li>
+						<li>Suggested Focus: Coaches from U/5's through to U/12's</li>
 						<li>Price: TBC.</li>
 					</ul>
 				</div>
