--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -46,10 +46,9 @@
 					<p class="lead">
 						During 2024, we are expanding our Academy's focus to include private 1-on-1 sessions for U13's - U18's.</p>
 					<p class="lead">
-						These sessions are customised to suit the requirements of the client and their specific training needs.</p>
+						1-on-1 sessions are customised to suit the requirements of the client and their specific training needs.</p>
 					<p class="lead">
-						We are reasonably flexible in our delivery of these sessions, 
-						and if enough planning is communicated, may also travel off site to host specific sessions.</p>
+						<b>These sessions will be delivered during weekday mornings from 7:0am - 8:00am.</b> </p>
 					<h4>A general notice: At this early stage of our journey, we do not currently have access to full sized goals. 
 						Therefore, shooting exercises that involve a proper game-like finish are unavailable at our current location.</h4>
 					<p class="lead">
