--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
 					<h3>Our Mission</h3>
 					<p class="lead mt-2"> We are an educational establishment focused on long-term individual player development. 
-						Think of us like a “primary school” for football i.e. six y/o and up. 
-						We also offer specialized 1-on-1 training sessions for teenagers i.e. U13’s – U18’s. Targeted at those searching for upgrades inside their own individual games.
+						Think of us like a “primary school” for football, i.e. six y/o and up. </p>
+					<p class="lead mt-2"> We also offer specialized 1-on-1 training sessions for teenagers i.e. U13’s – U18’s. Targeted at those searching for upgrades inside their own individual games.
 					</p>
 					<a href="register.html" class="btn btn-info">Register Now</a>
 					<br>
