--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 					<div class="container">
 						<div class="carousel-caption pb-5 mb-5 text-center">
 							<p class="lead ">
-								<span class="emboss">School Holiday enrolments now open!
-								</span>
+								<span class="emboss">View current enrolment opportunities.</span>
 							</p>
 							<a href="register.html" class="btn btn-info">Register Now</a>
 						</div>
@@ -71,7 +70,7 @@
 								<h2 class="display-4 text-light"><span class="emboss2">Who we are</span></h2>
 							</div>
 							<p class="lead ">
-								<span class="emboss">Our Philosphy is what sets us apart.</span>
+								<span class="emboss">Our Philosophy sets us apart.</span>
 							</p>
 							<a href="OurPhilosophy.html" class="btn btn-info">Read More</a>
 						</div>
