--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
 						<img src="img/term_enrollment_website.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Term 1, 2024</h2>
-							<p class="card-text">Registration for school Term CLICK below or <a href="SchoolTerms.html"
+							<p class="card-text">To register for the school Term CLICK below or <a href="SchoolTerms.html"
 									class="link-secondary">Read more about...</a></p>
 							<a href="https://forms.office.com/r/1UGiKhSrmr"
 								class="btn btn-info">Register Now</a>
