--- a/timetables.html
+++ b/timetables.html
@@ -46,7 +46,7 @@
 		</div>
 		<div class="container">
 			<p> <b>CONFIRMED</b> Term 1, 2024</p>
-			<img src="img/Term_1_timetable_2024.jpg" width="70%">
+			<img src="img/Term_1_timetable_2024.png" width="70%">
 		</div>
 	</section>
 	<!-- About Info Section End -->
