--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="row py-5 text-center">
 
 				<div class="col-xl-3">
-					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
+					<i class="far fa-futbol mb-3" style="margin-top:40px"></i> <br>
 					<h3>Our Mission</h3>
 					<p class="lead mt-2"> We are an educational establishment focused on long-term individual player development. 
 						Think of us like a “primary school” for football, i.e. six y/o and up. </p>
