--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
 				<div class="col-xl-3">
 					<img src="img/soccer-ball-icon.png" alt="Your Icon" style="margin-top: 20px; width: 40px; height: 40px;">
 					<br>
-					<!i class="far fa-futbol mb-3" style="margin-top:40px"></i> <br>
 					<h3>Our Mission</h3>
 					<p class="lead mt-2"> We are an educational establishment focused on long-term individual player development. 
 						Think of us like a “primary school” for football, i.e. six y/o and up. </p>
@@ -106,8 +105,9 @@
 
 				</div>
 
-				<div class="col-xl-6">
-					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
+				<div class="col-xl-9">
+				<img src="img/soccer-ball-icon.png" alt="Your Icon" style="margin-top: 20px; width: 40px; height: 40px;">
+					<br>
 					<div class="fb-page" data-href="https://www.facebook.com/footandballacademy" data-show-posts="true" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" 	
 					data-width=500px width="500px" >
 						<blockquote cite="https://www.facebook.com/footandballacademy" class="fb-xfbml-parse-ignore">
@@ -119,7 +119,8 @@
 				</div>
 				
 				<div class="col-xl-3">
-					<i class="fas fa-futbol mb-3" style="margin-top:50px"></i> <br>
+				<img src="img/soccer-ball-icon.png" alt="Your Icon" style="margin-top: 20px; width: 40px; height: 40px;">
+					<br>
 					<h3>Meet our Founder</h3>
 					<p class="lead mt-2">Nick has dedicated Foot and Ball Academy to incorporating the latest trends in footballing education from around the world.</p>
 					<a target="_blank" href="Staff.html">
