--- a/register.html
+++ b/register.html
@@ -61,13 +61,13 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/Fct8QiW3QM">
-						<img src="img/Jan2024.hols.banner.png" style="max-height:300px" class="card-img-top" alt="January 2024 Holidays"></a>
+						<a href="https://forms.office.com/r/z0nPbZUz17">
+						<img src="img/easter2024.hols.banner.png" style="max-height:300px" class="card-img-top" alt="Easter 2024 Holidays"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">January 2024 Holiday Sessions</h2>
+							<h2 class="card-title">Easter 2024 Holiday Sessions</h2>
 							<p class="card-text">Register: click below or find out more --><a href="timetables.html"
 									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/Fct8QiW3QM"
+							<a href="https://forms.office.com/r/z0nPbZUz17"
 							class="btn btn-info">Register Now</a>
 						</div>
 					</div>
