--- a/timetables.html
+++ b/timetables.html
@@ -41,8 +41,8 @@
 	<!-- Info Section Start -->
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
-			<p>January <b>School Holidays</b>, 2024</p>
-			<img src="img/January.2024.hols.timetable.jpg" width="70%">
+			<p>Easter <b>School Holidays</b>, 2024</p>
+			<img src="img/easter.2024.hols.timetable.png" width="70%">
 		</div>
 		<div class="container">
 			<p> <b>CONFIRMED</b> Term 1, 2024</p>
