--- a/timetables.html
+++ b/timetables.html
@@ -42,7 +42,7 @@
 	<section id="about-info" class="py-5 my-5">
 		<div class="container">
 			<p>Easter <b>School Holidays</b>, 2024</p>
-			<img src="img/easter.2024.hols.timetable.png" width="70%">
+			<img src="img/easter.2024.hols.timetable.jpg" width="70%">
 		</div>
 		<div class="container">
 			<p> <b>CONFIRMED</b> Term 1, 2024</p>
