--- a/register.html
+++ b/register.html
@@ -46,13 +46,13 @@
 			<div class="row">
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/1UGiKhSrmr">
-						<img src="img/term_enrollment_website.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
+						<a href="https://forms.office.com/r/23DVCr4zFX">
+						<img src="img/term.2.banner.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 1, 2024</h2>
-							<p class="card-text">To register for the school Term CLICK below or <a href="SchoolTerms.html"
-									class="link-secondary">Read more about...</a></p>
-							<a href="https://forms.office.com/r/1UGiKhSrmr"
+							<h2 class="card-title">Term 2, 2024</h2>
+							<p class="card-text">To register for the school Term CLICK below or <a href="Pricing.html"
+									class="link-secondary">to view Term fees...</a></p>
+							<a href="https://forms.office.com/r/23DVCr4zFX"
 								class="btn btn-info">Register Now</a>
 
 						</div>
