--- a/fabfc/privacy.html
+++ b/fabfc/privacy.html
@@ -1,1 +1,18 @@
-fabFC does not collect any of your data.
+<p class="lead"> Privacy Policy for fabFC App by Foot and Ball Academy.</p> 
+
+<p class="lead"> Effective Date: 5th April 2024. </p>  
+
+<p class="lead"> Thank you for choosing fabFC, developed by Foot and Ball Academy. This Privacy Policy is intended to inform you about the data we do not collect, use, or share when you use our mobile application.</p>
+
+<p class="lead"> 1.	Information We Do Not Collect: fabFC does not collect any user data, including but not limited to personal information, device information, or any other data.</p>
+<p class="lead"> 2.	Data Usage: As fabFC does not collect any user data, there is no usage of such data.</p>
+<p class="lead"> 3.	Data Sharing: We do not share any user data, whether it be with third parties or within Foot and Ball Academy.</p>
+<p class="lead"> 4.	Data Retention and Deletion Policy: Since no user data is collected, there is no need for a data retention or deletion policy.</p>
+<p class="lead"> 5.	Contact Us: If you have any questions or concerns about this Privacy Policy, please contact us at footandballacademy@outlook.com.</p>
+<p class="lead"> 6.	Changes to This Privacy Policy: Foot and Ball Academy reserves the right to update or change this Privacy Policy at any time. </p>
+  Any changes will be effective immediately upon posting the updated Privacy Policy on the fabFC app.</p>
+  
+<p class="lead"> By using the fabFC app, you consent to the terms outlined in this Privacy Policy.</p>
+<p class="lead"> Nicholas Barnett-Moore</p>
+
+
