--- a/register.html
+++ b/register.html
@@ -61,12 +61,13 @@
 
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<img src="img/stock5.jpg" style="max-height:300px" class="card-img-top" alt="Term 2 Holidays"></a>
+						<a href="https://forms.office.com/r/aKejjB1pwX">
+						<img src="img/Term2.hols.2024.png" style="max-height:300px" class="card-img-top" alt="Term 2 Holidays"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 2 Holidays</h2>
-							<p class="card-text">Find out more about us --><a href="OurPhilosophy.html"
-									class="link-secondary">Read more...</a></p>
-							<a href="" class="btn btn-info disabled" aria-disabled="true">Coming soon..</a>
+							<p class="card-text">To register for July Holiday's CLICK below or <a href="Pricing.html"
+									class="link-secondary">view timetable...</a></p>
+							<a href="https://forms.office.com/r/aKejjB1pwX"
+								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
 				</div> 
