--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
 				<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
 						<a href="https://forms.office.com/r/aKejjB1pwX">
-						<img src="img/Term2.hols.2024.png" style="max-height:300px" class="card-img-top" alt="Term 2 Holidays"></a>
+						<img src="img/Term2.hols.2024.header.png" style="max-height:300px" class="card-img-top" alt="Term 2 Holidays"></a>
 						<div class="card-body d-flex flex-column">
 							<p class="card-text">To register for July Holiday's CLICK below or <a href="Pricing.html"
 									class="link-secondary">view timetable...</a></p>
