--- a/register.html
+++ b/register.html
@@ -64,7 +64,7 @@
 						<a href="https://forms.office.com/r/aKejjB1pwX">
 						<img src="img/Term2.hols.2024.header.png" style="max-height:300px" class="card-img-top" alt="Term 2 Holidays"></a>
 						<div class="card-body d-flex flex-column">
-							<p class="card-text">To register for July Holiday's CLICK below or <a href="Pricing.html"
+							<p class="card-text">To register for July Holiday's CLICK below or <a href="timetables.html"
 									class="link-secondary">view timetable...</a></p>
 							<a href="https://forms.office.com/r/aKejjB1pwX"
 								class="btn btn-info">Register Now</a>
