--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
 							<h2 class="card-title">Term 3, 2024</h2>
 							<p class="card-text">To register for the school Term CLICK below or <a href="Pricing.html"
 									class="link-secondary">to view Term fees...</a></p>
-							<a href="hhttps://forms.office.com/r/GUeFKgZRuw"
+							<a href="https://forms.office.com/r/GUeFKgZRuw"
 								class="btn btn-info">Register Now</a>
 
 						</div>
