--- a/TOS.html
+++ b/TOS.html
@@ -52,7 +52,7 @@
 					<p>Foot and Ball Academy reserves the right to refuse admission to any person for any session
 						for any reason. If requested by Foot and Ball Academy staff for whatever reason, parents / guardians and any
 						children in their care must leave the session immediately. Additionally, Foot and Ball Academy reserves the
-						right to cancel or deny a registration to any person for any reason.</p>
+						right to cancel or deny a registration to any player for any reason throughout a school term.</p>
 					<p>All enquires to Foot and Ball Academy can be made over the phone, through email at
 						footandballacademy@outlook.com, or through social media sites such as Facebook.</p>
 					<p>Foot and Ball Academy reserve the right to make amendments to our Terms and Conditions at any time to
