--- a/register.html
+++ b/register.html
@@ -50,8 +50,7 @@
 						<img src="img/t4.24.website.header.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Term 4, 2024</h2>
-							<p class="card-text">To register for the school Term CLICK below or <a href="Pricing.html"
-									class="link-secondary">to view Term fees...</a></p>
+							<p class="card-text">Click REGISTER NOW to enrol for the latest school term </p>
 							<a href="hhttps://forms.office.com/r/Gx7B6pKRcH"
 								class="btn btn-info">Register Now</a>
 
