--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Term 4, 2024</h2>
 							<p class="card-text">Click REGISTER NOW to enrol for the latest school term </p>
-							<a href="hhttps://forms.office.com/r/Gx7B6pKRcH"
+							<a href="https://forms.office.com/r/Gx7B6pKRcH"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
